argocd/core/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: kong
  rules:
    - host: keycloak.remikeat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  name: http
          # - path: /realms/
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: keycloak-service
          #       port:
          #         name: http
          # - path: /resources/
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: keycloak-service
          #       port:
          #         name: http
          # - path: /robots.txt
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: keycloak-service
          #       port:
          #         name: http
  tls:
    - hosts:
        - keycloak.remikeat.com
      secretName: keycloak-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-admin
  namespace: keycloak
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  name: http
  tls:
    - hosts:
        - keycloak-admin
